# 360-ring-camera-tools

./: .gitignore  Readme.md  a  a.txt  cam.py  cam1.py  cam_lid_external2.cpp  fake_lidar.txt  make_lidar.py  project.py  test.cpp  unfold.cpp  unfold_pal.py  全景相机成像模型.pptx
M4_undistort/: M4_undistort.sln
M4_undistort/M4_undistort/: M4_undistort.cpp
M4_undistort/M4_undistort/08_01_05_922692/: calib_cmos0.xml  calib_cmos1.xml  calib_cmos2.xml  calib_cmos3.xml  show.py
calib/: 1.py  CMakeLists.txt  aa  aa.cpp  axis.py  cail  cam.cam  cam_point.txt  cam_point_yuyan.txt  cameraCalib  common.h  corner_lidar.txt  corner_photo.txt  extrinsic.txt  extrinsic_back.txt  extrinsic_pano.txt  extrinsic_pano.txt.bak  extrinsic_yuyan.txt  get_point.py  intrinsic.txt  intrinsic_pano.txt  lidar_point copy.txt  lidar_point.txt  lidar_point_yuyan.txt  lidar_point_yuyan2.txt  main.c  main.cpp  main1.cpp  main_pano_yaw.cpp  main_yuyan.cpp  main_yuyan4.cpp  merge_pcd.cpp  pcd_show.cpp  projectCloud_pano  projectCloud_yuyan.cpp  result_verify.h  saved_cam.cam  showpic  test_fs  turn.py  (+4 more)
